data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1896.wast
;; 7. **Invalid `br_if` Operand Type**:    - **Description**: Implement `br_if` using `f32` as the condition operand instead of `i32`.    - **Constraint**: Checks the requirement of `i32` as the condition type for `br_if`.    - **Differential Behavior**: WASM enforces strict operand type, wizard_engine might improperly handle the condition due to bad reference entry.

(assert_invalid
  (module (func $invalid-br_if-operand-type
    (block (br_if 0 (f32.const 0.0)))
  ))
  "type mismatch"
)